<resources>
    <string name="app_name">Quiz App</string>
    <string name="person_icon">person_icon</string>
    <string name="createdUserWelcomeText">Already have an account?</string>
    <string name="registerUserWelcomeText">Create a new account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="registerUser">Click here to create an account!</string>
    <string name="createdUser">Already have an account?</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="firstCellLabel">JAVA</string>
    <string name="secondCellLabel">PHP</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_item_category">Category</string>
    <string name="nav_item_ranking">Ranking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
</resources>